--- a/index.html
+++ b/index.html
@@ -4,11 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Code Quiz</title>
-    <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="./style.css"> -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <style>
+        header {
+            background: #333;
+            color: #fff;
+            padding: 10px;
+            margin: 10px;
+            text-align:center;
+        }
+
+        .container {
+            width: 90%;
+            margin: auto;
+
+        }
+
+    </style>
 </head>
 <body>
+    <header>
+        <h1>JavaScript Quiz</h1>
+    </header>
+
+    <div class="container">
+        <h2 id = "questions">Questions will go here.</h2>
+        <ul id = "answers">
+        </ul>
+    </div>
+
+
+    <!-- <h2 id = "questions"></h2>
+    <div class = "answers"></div> -->
     
 
-    <link rel="stylesheet" href="script.js">
+    <script src="./script.js"></script>
 </body>
 </html>
