--- a/index.html
+++ b/index.html
@@ -4,82 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Code Quiz</title>
-    <!-- <link rel="stylesheet" href="./style.css"> -->
-    <style>
-        header {
-            background: #333;
-            color: #fff;
-            padding: 10px;
-            margin: 10px;
-            text-align:center;
-        }
-
-        .container {
-            width: 90%;
-            margin: auto;
-
-        }
-
-        #question {
-            padding: 20px 0;
-            font-size: 30px;
-        }
-
-        .btn-grid {
-            display: grid;
-            gap: 10px;
-            margin: 20px, 0;
-        }
-
-        .btn {
-            padding: 10px;
-            border: 1px, solid;
-            border-radius: 5px;
-            font-size: 18px;
-        }
-
-        .btn:hover {
-            border-color: black;
-            border: 2px, solid;
-            background-color: #333;
-            color:#fff;
-        }
-
-        #start-btn {
-            font-size: 50px;
-            padding: 20px;
-        }
-
-        #start {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-
-        }
-
-        .hide {
-            display: none;
-        }
-
-        #timer {
-            text-align: end;
-            font-size: 30px;
-            color: darkred;
-            
-        }
-
-        #score {
-            text-align: center;
-            font-size: 40px;
-
-        }
-
-        h3 {
-            text-align: center;
-        }
-
-
-    </style>
+    <link rel="stylesheet" href="./style.css">
+    
 </head>
 <body>
     <header>
@@ -90,12 +16,7 @@
         <div id="question-container" class="hide">
             <div id="timer">45</div>
             <div id="question">Question</div>
-            <div id="answer-btns" class="btn-grid">
-                <!-- <button class="btn">Answer 1</button>
-                <button class="btn">Answer 2</button>
-                <button class="btn">Answer 3</button>
-                <button class="btn">Answer 4</button> -->
-            </div>
+            <div id="answer-btns" class="btn-grid"></div>
         </div>
         <br>
         <div id="start">
@@ -106,7 +27,6 @@
             <label for="Initials">Your Initials:</label>
             <input type="text" id="initials" name="initials"><br><br>
             <input type="submit" value="Save" id='submit'>
-            <!-- <input  type="text" placeholder="Initials" id="initials"> -->
             <hr>
             <div>
                 <h3>Previous Scores</h3>
